- Adjusted search input font size on mobile view to prevent zoom-in issue on Apple devices.

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -52,7 +52,7 @@
     background: #fff;
     font-family: inherit;
     color: inherit;
-    font-size: 1.7rem;
+    font-size: 2rem;
     visibility: hidden;
     opacity: 0;
     transform: translateY(-1rem);
